// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add email to Page Component state correctly from input function 1`] = `
<div
  className="page"
>
  <div
    className="page__grey-container"
  >
    <p
      className="page__heading-text"
    >
      Share 
      <span
        className="page__heading-text__bold"
      >
        Project name 
      </span>
      with others
    </p>
    <EmailsInput
      emailsToRender={
        Array [
          Object {
            "emailId": "test@test.com",
          },
        ]
      }
      removeEmail={[Function]}
      updateEmailsList={[Function]}
    />
  </div>
  <div
    className="page__btn-container"
  >
    <Button
      handleClick={[Function]}
      title="Add Email"
    />
    <Button
      handleClick={[Function]}
      title="Get emails count"
    />
  </div>
</div>
`;

exports[`should remove email from Page Component state correctly from remove function 1`] = `
<div
  className="page"
>
  <div
    className="page__grey-container"
  >
    <p
      className="page__heading-text"
    >
      Share 
      <span
        className="page__heading-text__bold"
      >
        Project name 
      </span>
      with others
    </p>
    <EmailsInput
      emailsToRender={Array []}
      removeEmail={[Function]}
      updateEmailsList={[Function]}
    />
  </div>
  <div
    className="page__btn-container"
  >
    <Button
      handleClick={[Function]}
      title="Add Email"
    />
    <Button
      handleClick={[Function]}
      title="Get emails count"
    />
  </div>
</div>
`;

exports[`should render Page Component correctly 1`] = `
<div
  className="page"
>
  <div
    className="page__grey-container"
  >
    <p
      className="page__heading-text"
    >
      Share 
      <span
        className="page__heading-text__bold"
      >
        Project name 
      </span>
      with others
    </p>
    <EmailsInput
      emailsToRender={Array []}
      removeEmail={[Function]}
      updateEmailsList={[Function]}
    />
  </div>
  <div
    className="page__btn-container"
  >
    <Button
      handleClick={[Function]}
      title="Add Email"
    />
    <Button
      handleClick={[Function]}
      title="Get emails count"
    />
  </div>
</div>
`;

exports[`should show alert from Page Component 1`] = `
<div
  className="page"
>
  <div
    className="page__grey-container"
  >
    <p
      className="page__heading-text"
    >
      Share 
      <span
        className="page__heading-text__bold"
      >
        Project name 
      </span>
      with others
    </p>
    <EmailsInput
      emailsToRender={
        Array [
          Object {
            "emailId": "test@test.com",
          },
        ]
      }
      removeEmail={[Function]}
      updateEmailsList={[Function]}
    />
  </div>
  <div
    className="page__btn-container"
  >
    <Button
      handleClick={[Function]}
      title="Add Email"
    />
    <Button
      handleClick={[Function]}
      title="Get emails count"
    />
  </div>
</div>
`;
